create navbar html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
     <title>AhorrADAs</title>
 </head>
 <body>
-    
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div >
+            <a class="navbarTitle"><i class="fa-solid fa-wallet"></i>
+                Ahorradas
+            </a>
+            <!-- burger menu -->
+            <a role="button" class="navbarBurger" aria-label="menu" >
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+        <div id="navbarMenu" class="navbarMenu">
+            <div class="">
+                <a class="navbarItem"> <i class="fa-solid fa-chart-line"></i>
+                    Balance
+                </a>
+                <a class="navbarItem"> <i class="fa-solid fa-tag"></i>
+                    Categorias
+                </a>
+                <a class="navbarItem"> <i class="fa-solid fa-chart-pie"></i>
+                    Reportes
+                </a>
+            </div>
+        </div>
+        </div>
+    </nav>
     <script src="js/script.js"></script>
 </body>
 </html>
