give styles with tw delet burger menu

--- a/index.html
+++ b/index.html
@@ -9,28 +9,22 @@
     <title>AhorrADAs</title>
     <title>AhorrADAs</title>
 </head>
-<body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div >
-            <a class="navbarTitle"><i class="fa-solid fa-wallet"></i>
+<body class="box-border p-0">
+    <nav class="w-screen h-24 px-3.5 bg-emerald-400 flex " id="navBar"  aria-label="main navigation">
+        <div class="w-2/4 h-full flex px-2.5 items-center">
+            <a class="navbarTitle text-6xl text-slate-50" id="navbarTitle"><i class="fa-solid fa-wallet text-5xl px-2 text-slate-50"></i>
                 Ahorradas
             </a>
-            <!-- burger menu -->
-            <a role="button" class="navbarBurger" aria-label="menu" >
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
         </div>
-        <div id="navbarMenu" class="navbarMenu">
-            <div class="">
-                <a class="navbarItem"> <i class="fa-solid fa-chart-line"></i>
+        <div class="navbarMenu " id="navbarMenu" >
+            <div class="h-full flex px-2.5 items-center">
+                <a class="navbarItem text-slate-50 px-3.5 text-xl" id="navbarItemBalance"> <i class="fa-solid fa-chart-line px-2"></i>
                     Balance
                 </a>
-                <a class="navbarItem"> <i class="fa-solid fa-tag"></i>
+                <a class="navbarItem text-slate-50 px-3.5 text-xl" id="navbarItemCategories"> <i class="fa-solid fa-tag px-2"></i>
                     Categorias
                 </a>
-                <a class="navbarItem"> <i class="fa-solid fa-chart-pie"></i>
+                <a class="navbarItem text-slate-50 px-3.5 text-xl " id="navbarItemReports"> <i class="fa-solid fa-chart-pie px-2"></i>
                     Reportes
                 </a>
             </div>
