create html main

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             </div>
         </div>
     </nav>
+    <main>
+        
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
