--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,30 +10,139 @@
     <title>AhorrADAs</title>
     <title>AhorrADAs</title>
 </head>
+
 <body class="box-border p-0">
-    <nav class="w-screen h-24 px-3.5 bg-emerald-400 flex " id="navBar"  aria-label="main navigation">
+    <nav class="w-screen h-24 px-3.5 bg-emerald-400 flex " id="navBar" aria-label="main navigation">
         <div class="w-2/4 h-full flex px-2.5 items-center">
-            <a class="navbarTitle text-6xl text-slate-50" id="navbarTitle"><i class="fa-solid fa-wallet text-5xl px-2 text-slate-50"></i>
+            <a class="navbarTitle text-6xl text-slate-50" id="navbarTitle"><i
+                    class="fa-solid fa-wallet text-5xl px-2 text-slate-50"></i>
                 Ahorradas
             </a>
         </div>
-        <div class="navbarMenu " id="navbarMenu" >
+        <div class="navbarMenu " id="navbarMenu">
             <div class="h-full flex px-2.5 items-center">
-                <a class="navbarItem text-slate-50 px-3.5 text-xl" id="navbarItemBalance"> <i class="fa-solid fa-chart-line px-2"></i>
+                <a class="navbarItem text-slate-50 px-3.5 text-xl" id="navbarItemBalance"> <i
+                        class="fa-solid fa-chart-line px-2"></i>
                     Balance
                 </a>
-                <a class="navbarItem text-slate-50 px-3.5 text-xl" id="navbarItemCategories"> <i class="fa-solid fa-tag px-2"></i>
+                <a class="navbarItem text-slate-50 px-3.5 text-xl" id="navbarItemCategories"> <i
+                        class="fa-solid fa-tag px-2"></i>
                     Categorias
                 </a>
-                <a class="navbarItem text-slate-50 px-3.5 text-xl " id="navbarItemReports"> <i class="fa-solid fa-chart-pie px-2"></i>
+                <a class="navbarItem text-slate-50 px-3.5 text-xl " id="navbarItemReports"> <i
+                        class="fa-solid fa-chart-pie px-2"></i>
                     Reportes
                 </a>
             </div>
         </div>
     </nav>
     <main>
-        
+        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BALANCE SECTION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+        <section>
+            <div class="mainBox" id="mainBox">
+                <div>
+                    <!--this div is for create a box than contain banceBox & filterBox  -->
+                    <!-- ---------------------- BALANCE BOX ---------------- -->
+                    <div class="balanceBox" id="balanceBox">
+                        <h2>Balance</h2>
+                        <div class="balanceBoxBoard" id="balanceBoxBoard">
+                            <div>
+                                <p>Ganancias</p>
+                            </div>
+                            <div>
+                                +0
+                            </div>
+                            <div>
+                                <p>Gastos</p>
+                            </div>
+                            <div>
+                                -0
+                            </div>
+                            <div>
+                                <p>Total</p>
+                            </div>
+                            <div>
+                                $0
+                            </div>
+                        </div>
+                    </div>
+                    <!-- ---------------------- FILTER BOX ---------------- -->
+                    <div class="filterBox">
+                        <div class="filterBoxTitle">
+                            <div>
+                                <h3>Filtros</h3>
+                            </div>
+                            <div>
+                                <a href="#" id="toggleFilters">Ocultar filtros</a>
+                            </div>
+                        </div>
+                        <div class="filterBoxFilters" id="filters">
+
+                            <form action="#">
+                                <fieldset>
+                                    <label for="typeForm">Tipo</label>
+                                    <select name="type" id="typeForm">
+                                        <option value="test">test</option>
+                                    </select>
+                                    <label for="categoryForm">Categoria</label>
+                                    <select name="category" id="categoryForm">
+                                        <option value="test">test</option>
+                                    </select>
+                                    <label for="dateForm">Desde</label>
+                                    <input type="date">
+                                    <label for="sortByForm">Desde</label>
+                                    <select name="sortBy" id="sortByForm">
+                                        <option value="test">Mas Reciente</option>
+                                        <option value="test">Menos Reciente</option>
+                                        <option value="test">Mayor Monto</option>
+                                        <option value="test">Menor Monto</option>
+                                        <option value="test">A/Z</option>
+                                        <option value="test">Z/A</option>
+                                    </select>
+                                </fieldset>    
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <!-- ---------------------- OPERATIONS BOX ---------------- -->
+                <div class="operationsBox" id="operationsBox">
+                    <div class="operationsBoxTitle">
+                        <h3>Operaciones</h3>
+                        <button>+ Nueva Operación</button>
+                    </div>
+                    <div class="operationsBoxDisplay">
+                        <div class="" id="operationsBoxNone">
+                            <figure>
+                                <img src="img/wallet.svg" alt="wallet">
+                            </figure>
+                            <h4>Sin Resultados</h4>
+                            <p>Cambia los filtros o agrega operaciones</p>
+                        </div>
+                        <div class="" id="operationsBoxShow">
+                            <div id="operationsBoxBoardHeaders">
+                                <div>
+                                    <p>Descipción</p>
+                                </div>
+                                <div>
+                                    <p>Categoria</p>
+                                </div>
+                                <div>
+                                    <p>Fecha</p>
+                                </div>
+                                <div>
+                                    <p>Monto</p>
+                                </div>
+                                <div>
+                                    <p>Aciones</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="js/script.js"></script>
 </body>
+
 </html>
