--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <main class="bg-slate-100 flex justify-center items-center">
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BALANCE SECTION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-        <section class="w-2/4 h-screen mt-52">
+        <section class="w-2/4 h-screen mt-52 hidden" id="balance">
             <div class="grid grid-cols-12 gap-x-3.5 flex justify-around justify-items-stretch " id="mainBox">
                 <!-- ------------------------ BALANCE & FILTER BOX ---------- -->
                 <div class="col-span-4 "><!--this div is for create a box than contain balanceBox & filterBox  -->
@@ -132,6 +132,34 @@
                                 </div>
                                 <div>
                                     <p  class="text-lg text-right">Aciones</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CATEGORIES SECTION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+        <section class="w-2/4 h-screen mt-52" id="categories">
+            <div class="border-solid border-2 border-gray-100 rounded-md bg-white py-3.5">
+                <div class="sm:w-full w-12/12 px-4">
+                    <h1 class="text-4xl font-bold py-4">Categorías</h1>
+                    <div class="flex content-center flex-col w-12/12">
+                        <form action="" class="mt-8">
+                            <label for="" class="font-bold">Nombre</label>
+                            <div class="pt-2 flex">
+                                <input type="text" class="border rounded border-black border-slate-200 w-11/12 py-2">
+                                <button class="bg-green-500 rounded text-white px-5 py-2 ml-4">Agregar</button>
+                            </div>
+                        </form>
+                        <!--Dynamic categories with js-->
+                        <div class="
+                        pt-9">
+                            <div class="flex justify-between w-12/12">
+                                <span class="text-xs bg-emerald-50 text-green-500 px-2 py-1 rounded">Comida</span>
+                                <div>
+                                    <a href="#" class="text-xs text-sky-600 mr-6">Editar</a>
+                                    <a href="#" class="text-xs text-sky-600">Eliminar</a>
                                 </div>
                             </div>
                         </div>
