fix missing close tags

--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
 
                             </div>
                         </form>
-
+                    </div>
+                </div>
+            </div>           
         </section>
     </main>
     <script src="js/script.js"></script>
