star adding styles with css

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <h4 class="py-4 text-2xl font-medium text-slate-700">Operaciones insuficientes</h4>
                     <p class="mb-6">Prueba agregando más operaciones</p>
                 </div>
-                <div id="reportsDisplay">
+                <div class="hidden" id="reportsDisplay">
                     <!-- Resumen -->
                     <div class="px-3.5 py-2.5">
                         <h4 class="text-xl font-bold py-4">Resumen</h4>
